--- a/src/content/posts/2024-09-03-testy-0.md
+++ b/src/content/posts/2024-09-03-testy-0.md
@@ -1,6 +1,6 @@
 ---
 title: Testy 0
 date: 2024-09-03T12:17:00.000Z
-image: /src/uploads/descargar.jpeg
+image: /uploads/descargar.jpeg
 ---
 testyxz
